--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "arcoentim/vkatp-lemonator/pybind11"]
 	path = arcoentim/vkatp-lemonator/pybind11
 	url = git://github.com/pybind/pybind11
+[submodule "arcoentim/hwlib"]
+	path = arcoentim/hwlib
+	url = git://github.com/wovo/hwlib
