Added bmptk as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "arcoentim/hwlib"]
 	path = arcoentim/hwlib
 	url = git://github.com/wovo/hwlib
+[submodule "arcoentim/bmtpk"]
+	path = arcoentim/bmtpk
+	url = git://github.com/wovo/bmptk
