--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "arcoentim/vkatp-lemonator/pybind11"]
 	path = arcoentim/vkatp-lemonator/pybind11
 	url = git://github.com/pybind/pybind11
+[submodule "arcoentim/externals/hwlib"]
+	path = arcoentim/externals/hwlib
+	url = https://github.com/cjsmeele/hwlib.git
