Put everything in the c++ controller, but unable to test due to linker errors

--- a/arcoentim/vkatp-lemonator/cplusplustopython/makefile
+++ b/arcoentim/vkatp-lemonator/cplusplustopython/makefile
@@ -8,7 +8,7 @@
 # 
 #############################################################################
 
-PROJECT := controllerCPlusPlus
+PROJECT := main
 
 # source files in this project (main.cpp is automatically assumed)
 SOURCES := rs232.c controllerCPlusPlus.cpp
