Overall update, made a better c++ version

--- a/arcoentim/vkatp-lemonator/Makefile.native
+++ b/arcoentim/vkatp-lemonator/Makefile.native
@@ -12,7 +12,7 @@
 TARGET            := native
 
 # enable exeptions (disabled by default by bmptk)
-£ PROJECT_CPP_FLAGS += -fexceptions -frtti
+PROJECT_CPP_FLAGS += -fexceptions -frtti -std=gnu++14
 
 # add the RS-232 library
 SEARCH            += $(RELATIVE)/../RS-232
